--- a/Script/script.tex
+++ b/Script/script.tex
@@ -29,10 +29,10 @@
     % http://www.ctan.org/tex-archive/macros/latex/required/tools
 
 \setmonofont{Iosevka}
-\setCJKmainfont{FZXSSK.TTF}[BoldFont={SourceHanSerifCN-Bold.otf}, ItalicFont={FZXKTK.TTF}, BoldItalicFont={汉仪颜楷W.ttf}]
-\setCJKsansfont{汉仪文黑-45W.ttf}[BoldFont={汉仪文黑-75W.ttf}, ItalicFont={FZYanZQKSJF.TTF}]
-\setCJKmonofont{LXGWNeoXiHei.ttf}
-\newCJKfontfamily{\kai}{FZXKTK.TTF}[BoldFont={汉仪颜楷W.ttf}, ItalicFont={方正清刻本悦宋 简繁.TTF}, BoldItalicFont={FZYanZQKSJF.TTF}]
+\setCJKmainfont{方正新书宋_GBK}[BoldFont={思源宋体 CN Bold}, ItalicFont={方正新楷体_GBK}, BoldItalicFont={汉仪颜楷 W}]
+\setCJKsansfont{汉仪文黑-45W ExtraLight}[BoldFont={汉仪文黑-75W Bold}, ItalicFont={方正颜真卿楷书 简繁}]
+\setCJKmonofont{霞鹭新晰黑}
+\newCJKfontfamily{\kai}{方正新楷体_GBK}[BoldFont={汉仪颜楷 W}, ItalicFont={方正清刻本悦宋 简繁}, BoldItalicFont={方正颜真卿楷书 简繁}]
 
 \newlength{\drop}
     % 定义 \drop 长度变量，用于标题页的垂直位置调整。
@@ -90,7 +90,7 @@
                 % [2\baselineskip]{\huge\itshape Subtitle of the play \\[0.5\baselineskip] over two lines}\\
                 % 
                 % 剧本的类型/作者
-                [2\baselineskip]{\Large 科幻（且希望是但还不是）喜剧}
+                [2\baselineskip]{\Large 大概是科幻}
                 \par\vspace{0.5\textheight}
                 % [4\baselineskip]{
                 %     \Large First Author \\[0.5\baselineskip] 
@@ -282,8 +282,6 @@
 
 % With regard to some particular passages which seemed generally disliked, I confess that if I felt any emotion of surprise at the disapprobation, it was not that they were disapproved of, but that I had not before perceived that they deserved it.
 
-\clearpage
-
 %%%%%%%%%%%%%%%%%%%%%
 \chapter*{第二稿说明}
 %%%%%%%%%%%%%%%%%%%%%
@@ -292,8 +290,18 @@
 在第一稿的基础上，我对剧本进行了一些修改。
 
 首先，受限于拍摄场地的条件，经过取舍，暂定还是直白地把剧本的背景设定在大学校园，而 A 的回忆则设定为在大学科技冬令营中。
-这样一来，剧本的背景就更加贴近大学生的生活，也更容易找到合适的拍摄场地。
+这样一来，剧本的背景就更加贴近大学生的生活，也更容易找到合适的拍摄场地。但我仍然认为，这个故事的主线是关于成长、关于教育的，如果还能找到更像是高中或者更容易当做高中的场地，那还是用支教队的故事来表现 A 的成长更好。四字班的同学们对支教实践还相对陌生，因而更抱有一些幻想，这也更利于表现故事。
 
+另外，在许多因时间受限未在第一稿中展开的地方，我也进行了一些「个人的」补充，拉长剧本的呈现时间。但是，这些地方仍然需要演员们自己去发挥，以求呈现得更加自然、生动、接地气。因此，这一稿仍然是一个「草稿」，还需要在后续的排练中不断完善。
+
+{\hfill\kai 2024年10月11日}
+
+% %%%%%%%%%%%%%%%%%%%%%
+% \chapter*{第三稿说明}
+% %%%%%%%%%%%%%%%%%%%%%
+% \addcontentsline{toc}{section}{第三稿说明}
+
+% 在第二稿的基础上，我组织演员们逐段分析了剧本，对每一段的情节、人物、台词等进行了讨论。在这个过程中，演员们提出了许多宝贵的意见，对剧本的细节进行了修改，使得剧本更加符合实际情况，也更加生动有趣。
 
 
 \clearpage
@@ -328,13 +336,13 @@
             夜幕降临，繁星点点，AC 和几位同学正围坐在一台复杂的天线设备旁，调试着设备。
         }
         \dialog[AC]{
-            \direction{不耐烦地} 要不就这样，差不多得了吧。 \direction{把说明书丢到一边}
+            \direction{不耐烦地} 要不就这样，差不多得了。 \direction{把说明书丢到一边}
         }
         \dialog[B0]{
-            再看看呢，没多少地方没排查过了。\direction{拿起说明书}
+            再看看呢，也没几个地方要检查了。\direction{拿起说明书}
         }
         \dialog[B1]{
-            大不了再把排线检查一遍嘛。
+            大不了把接线再检查一遍嘛。
         }
         \dialog[AC]{
             \direction{一脸厌倦、无奈} 何必呢。再得不到结果，也得先准备答辩去了。
@@ -394,9 +402,9 @@
     \scene{
         \stage{
             \textup{
-                \textbf{时间点\(\boldsymbol{P}\)}，Q中学机房。
+                \textbf{时间点\(\boldsymbol{P}\)}，T大学机房。
             }
-            渐渐入夜，支教实践支队的几位同学正在一台一台地手动安装软件，为即将开始的支教活动做准备。机房窗外，刚下晚自习的 AP 带着D组同学们背着包、抱着书，靠在窗边向里张望。
+            渐渐入夜，参与科技营带班授课的几位同学正在一台一台地手动安装软件，为即将开始的教学活动做准备。机房窗外，刚来到 T 大学的 AP 带着D组同学们背着包、抱着书，靠在窗边向里张望。
         }
         \dialog[C1]{
             \direction{在不同进度的三台电脑前来回操作} 所以，这儿的终端管理软件是真的不能直接把软件包发下去吗？
@@ -427,9 +435,20 @@
     \scene{
         \stage{
             \textup{
-                \textbf{时间点\(\boldsymbol{P}\)}，Q中学机房。
+                \textbf{时间点\(\boldsymbol{P}\)}，T大学机房。
             }
-            自主设计阶段，AP 和同组的同学正在兴奋地讨论着他们的设计方案。这一组的指导助教 C0 在一旁默默地听着，同时在电脑上调试着自己的程序。
+            机房内，C 组同学为 AP 以及 D 组同学们讲解着单片机的基本原理和编程方法。
+        }
+        \stage{
+            【本段以闪过教学片段的方式呈现】
+        }
+    }
+    \scene{
+        \stage{
+            \textup{
+                \textbf{时间点\(\boldsymbol{P}\)}，T大学机房附近的研讨间。
+            }
+            进入自主设计阶段，AP 和同组的同学在 C0 的带领下来到一个研讨间，兴奋地讨论起他们的设计方案。这一组的指导助教 C0 在一旁默默地听着，同时在电脑上调试着自己的程序。
         }
         \dialog[D0]{
             \direction{摆弄着几个舵机} 
@@ -439,12 +458,12 @@
             不大行吧，刚刚老师不是说这个舵机工作一段时间就会抽风嘛。而且，只做一个模型，也没有实际功能，不太好哦。
         }
         \dialog[D2]{
-            那做个闹钟呢？把电机放在闹钟上，早上闹钟响了，电机就把你的被子给扯掉，这样就不会再睡过头了。
+            那做个闹钟呢？把舵机放在闹钟上，早上闹钟响了，舵机就把你的被子给扯掉，这样就不会再睡过头了。
         }
         \dialog[D3]{
             \direction{众笑}
-            这小电机哪有那么大劲啊。
-            要不做个收纳箱吧，把舵机放在箱子里，然后用板子控制箱子的开合，用摇杆上上下下左左右右AABB当密码，这样就有点意思了，也有用处。
+            这小舵机哪有那么大劲啊。
+            要不做个收纳箱吧，把舵机放在箱子里，然后用板子控制箱子的开合，用摇杆「上上下下左左右右AABB」当密码，这样就有点意思了，也有用处。
         }
         \dialog[D4]{
             做个音乐盒呢，我看老师之前演示的蜂鸣器编曲还挺方便的。
@@ -504,57 +523,74 @@
     \scene{
         \stage{
             \textup{
-                \textbf{时间点\(\boldsymbol{P}\)}，Q中学操场。
+                \textbf{时间点\(\boldsymbol{P}\)}，T大学操场。
             }
-            雨淅淅沥沥地下着，夜色已深，操场上空无一人，只有几盏昏黄的路灯洒在湿漉漉的地面上。AP 思索着自己的设计方案，看着远处的天空，更加坚持自己的想法，但既不确定其是不是真的可行，也不知道如何说服同组的同学。AP 在操场上独自思考。
+            夜色已深。操场上空无一人，只有几盏昏黄的路灯洒在湿漉漉的地面上。AP 思索着自己的设计方案，看着远处的天空，更加坚持自己的想法，但既不确定其是不是真的可行，也不知道如何说服同组的同学。AP 在操场上独自思考。
         }
         \stage{
-            C0 从教学楼走出，看到操场上的 AP，便撑着一把伞走了过去。
+            C0 从教学楼走出，看到操场上的 AP 正在思索些什么，便走了过去。
         }
         \dialog[C0]{
-            \direction{走到 AP 身边} 怎么，这么晚了还在这儿？\direction{递伞} 还淋着雨，会感冒的，快回去吧。
+            \direction{走到 AP 身边} 怎么，这么晚了还在这儿？
         }
         \dialog[AP]{
-            \direction{抬起头，勉强挤出一个笑容，接过伞，看向远方} 我在想，我的设计方案，是不是太大了？
+            \direction{抬起头，勉强挤出一个笑容，看向远方} 我在想，我的设计方案，是不是太大了？
         }
         \dialog[C0]{
-            \direction{看着远方，思考} 你说的是，关于那个，把信息编码成二进制串，然后发射到太空的想法吗？
+            \direction{扭头，思考} 你说的是，关于那个，把信息编码成二进制串，然后发射到太空的想法吗？
         }
         \dialog[AP]{
-            \direction{回头} 嗯。
+            \direction{回头} 嗯。\direction{开始踱步}
         }
         \dialog[C0]{
-            你这个想法确实比较大胆，也确实需要一些技术支持和更多的论证。但最重要的是，你要相信自己的想法，并且努力去实现它。\direction{抬头} 你有想过，这个方案的意义吗？
+            \direction{跟上脚步} 你这个想法确实比较大胆，也确实需要一些技术支持和更多的论证。但最重要的是，你要相信自己的想法，并且努力去实现它。\direction{抬头} 你有想过，这个方案的意义吗？
         }
         \dialog[AP]{
-            \direction{思考} 意义？
+            \direction{思考} 意义？\direction{摇头}
         }
         \dialog[C0]{
-            \direction{指向远方} 你看，那片天空，那些星星，那些星星背后的故事，那些故事背后的意义，你有想过吗？
+            我的同学们先前做这类项目的时候，有人选择的是做一个平衡小车，对进一步研究机器人的控制铺出了道路；有人选择的是做一个智能药盒，解决了老年人不按时吃药的问题……他们的项目都有自己的意义，你的呢？
         }
         \dialog[AP]{
-            \direction{看向远方} 我……
+            \direction{低头} 我……我不确定，但我的意义好像跟这些都不一样。
         }
         \dialog[C0]{
-            论证的部分，我可以帮你查，技术的部分，我也可以帮你做。但是，你要相信自己的想法，相信自己的能力，相信自己的意义。\direction{看向 AP} 因为这段时间我们终究时间有限，要实现更多的可能性，你还是需要未来自己去思考。
+            我可以帮你论证这个方案的可行性，也可以给你一些技术构想。但是，
+            \direction{看向 AP} 因为这段时间我们终究时间有限，要实现更多的可能性，你还是需要未来自己去思考。
         }
         \dialog[AP]{
             \direction{点头} 嗯。
         }
         \dialog[C0]{
-            回去吧，明天还有很多事情要做，你也需要休息。\direction{拍拍 AP 的肩膀} 别被现有的框架所限制，回去多想想那个关于「意义」的问题，你会找到答案的。
+            回去吧，明天还有很多事情要做，你也需要休息。回去多想想那个关于「意义」的问题吧，你会找到答案的。
         }
         \dialog[AP]{
-            \direction{看着远方，思考} 意义……
-        }
-        \stage{
-            第二天，C0 带着 AP 和其他组员们再次聚集在机房。C0 主动提起了 AP 的想法，拿出了一夜论证的结果，并鼓励大家一起去尝试和实现。同学们也被 C0 的鼓励所感染，纷纷在这个方案的基础上提出了更多的想法，开始了他们的设计和实现。【此段不详细展开，用蒙太奇的方式表现】
+            \direction{看着远方，思考} 嗯。\direction{出场}
         }
     }
     \scene{
         \stage{
             \textup{
-                \textbf{时间点\(\boldsymbol{P}\)}，Q中学操场。
+                \textbf{时间点\(\boldsymbol{P}\)}，T大学机房附近的研讨间。
+            }
+            第二天，C0 带着 AP 和其他组员们再次聚集在研讨间。C0 主动提起了 AP 的想法，拿出了一夜论证的结果，并鼓励大家一起去尝试和实现。同学们也被 C0 的鼓励所感染，纷纷在这个方案的基础上提出了更多的想法，开始了他们的设计和实现。
+        }
+        \dialog[C0]{
+            \direction{拿出一沓纸} 昨晚我想了一晚上，AP 提出的这个方案，我觉得还是有一定的可行性的。
+            更重要的是，这个方案具有很强的创新性和突破性，也能让我们学到很多东西。
+            我们可以先从这个方案的基本框架出发，逐步完善，逐步实现。
+        }
+        \stage{
+            同学们在稿纸上写写画画，讨论着各自的想法，C0 也在一旁指导着。随着时间推移，接线、焊接、编程、调试、封装，一切都在有条不紊地进行着，直到结营展示的到来。
+        }
+        \stage{
+            【本段以闪过设计讨论片段的方式呈现】
+        }
+    }
+    \scene{
+        \stage{
+            \textup{
+                \textbf{时间点\(\boldsymbol{P}\)}，T大学操场。
             }
             结营展示当天，AP 组的作品被特别放在最后展示。前面的作品展示完毕后，大家从礼堂走上操场，AP 组的同学们在操场中央的展示区域前等待着。大家围成一个大圈，把他们围在中间。
         }
@@ -565,10 +601,29 @@
             众人鼓掌。AP 带着发射装置走上展示区域，向四周的观众鞠躬。C0 也走上去，向观众们挥手致意。
         }
         \dialog[AP]{
-            \direction{向观众们展示，介绍作品的设计动机、技术细节和功能特点} （暂略）
+            \direction{面向观众} 大家好，现在我想向大家展示我们的作品。这是一个通信终端，我们把信息编码成二进制串，然后发射到太空中去。为了实现这个想法，我们经历了很多的困难和挑战，拜托可靠的 C0 学长查找了特别多的资料，迈过了一个又一个的坎，终于完成了这个作品。希望大家能喜欢！下面，我们来演示发射的过程。
         }
         \stage{
-            众人鼓掌。AP 和 C0 一起将板子和电脑连接好，将放大天线接上电源。一切准备就绪，在高涨的气氛中，AP 用摇杆将信号输入设备，传入高空。
+            组员们布置好了发射装置，在周围架起了一圈测量仪表。AP 拿起遥控器，手放在按钮上。
+        }
+        \dialog[AP]{
+            下面我按按钮所发出的是一首诗：\\[0.5em]
+            {
+            　　夜幕轻垂，星辉微漾天际边，\\
+            　　静静闪烁，希望之光载万千。\\
+            　　穿越时空，沧桑变幻皆见证，\\
+            　　成长路上，勇敢探索心无眠。\\[0.5em]
+            　　微光导航，迷途者心归航线，\\
+            　　虽小而坚，不弃终光映天边。\\
+            　　故事绵长，宇宙深处诉心愿，\\
+            　　静待奇迹，相逢一刻化永年。
+            }
+        }
+        \stage{
+            AP 用遥控器有节奏地按下按钮，周围的测量仪表开始有规律地跳动起来，发射装置上的指示灯也开始闪烁。
+        }
+        \stage{
+            众人鼓掌。在高涨的气氛中，信号传入高空。
         }
     }
 }
@@ -593,22 +648,66 @@
             B0 正要伸手去按 Mega 板的 Reset 键，AC 突然（有些激动地）拦住了他。
         }
         \dialog[AC]{
-            \direction{激动} 不！不要！这个波……先让它把收到的数据记着！
+            \direction{激动} 不！不要！这个波……先让它把收到的数据记着！如果我没猜错的话，马上，你们马上就知道我在说什么了！
         }
         \stage{
-            AC 快速写起了程序，凭着印象中当年的编码方式写出了一个解码程序。绘图仪中的图像慢慢平缓下来，突然出现的信号消失了，只剩下噪声起起伏伏。
+            （在激昂的BGM下）AC 快速敲起代码，凭着印象中当年的编码方式复现出了一个解码程序。绘图仪中的图像慢慢平缓下来，突然出现的信号消失了，只剩下噪声起起伏伏。
         }
         \stage{
             AC 将串口数据复制出来，导入刚刚写好的解码程序，终于在屏幕上看到了一行行的汉字。
         }
         \dialog[B0、B1]{
-            \direction{惊讶} 啊这……
+            \direction{惊讶} 啊？
+        }
+        \dialog[B0]{
+            这是什么？
         }
         \stage{
             AC 也有些激动，但又有些迷茫，屏幕上的汉字让他不得不相信，当年的信号不知为何有了回波。
         }
+        \dialog[AC]{
+            \direction{仿佛在自言自语} 这是……这是当年的编码…… \direction{缓过神来} 几年前，我在学校操场上，就是用这种编码方式，把这首诗发到天上去的。
+        }
+        \dialog[B1]{
+            等等等等，这首诗？几年前？发到天上？\direction{大为震撼}
+        }
+        \dialog[B0]{
+            \direction{大为震撼} 你是说，这个信号从那时候就一直在空间中传播，还折回到了现在？
+        }
+        \dialog[B1]{
+            这真的不是只有在科幻 DV 剧里才会出现的情节吗？
+        }
+        \dialog[AC]{
+            \direction{难以置信} 我也不知道，但这个信号，这个回波，确确实实就在这里。要是没有它，我之前都一直不敢确定，我当年的那个想法，到底是不是真的实现了。
+        }
         \stage{
             AC 解释着自己的难以置信却又铁证如山的想法，感觉到了当年的那份探索热情。冥冥之中，似乎确实有什么东西在等待着他。这种意义感让他重新振作起来。
+        }
+        \dialog[B0]{
+            \direction{打断 AC 的浮想联翩} 快开工吧，这至少说明我们电路没有问题了。至于这个特殊的信号从哪里来，我们以后再研究嘛。 
+        }
+        \dialog[AC]{
+            \direction{点头} 嗯，对，对。 \direction{开始调试电路}
+        }
+    }
+    \scene{
+        \stage{
+            \textup{
+                \textbf{时间点\(\boldsymbol{C}\)}，T大学会议室。
+            }
+            时隔几天，AC 和 B0、B1 三人在会议室里，向老师们汇报了他们的硬件设计成果。这一段时间，他们不断地调试、改进，终于实现了一个稳定的通信终端，取得了理想的成绩。
+        }
+        \stage{
+            【本段以闪过汇报片段的方式呈现】
+        }
+        \dialog[评委1（画外音）]{
+            你们的设计思路很独特，实现的效果也很好。
+        }
+        \dialog[评委2（画外音）]{
+            后续的改进方向，你们有没有考虑过？我建议你们去找 L 老师，他对这方面的研究很深。
+        }
+        \dialog[主持人（画外音）]{
+            获得特等奖的作品是——AC、B0、B1 同学的「BeyondTheFrequency 通信终端」！
         }
     }
     \scene{
@@ -616,7 +715,14 @@
             \textup{
                 \textbf{时间点\(\boldsymbol{C}\)}，P 中学机房。
             }
-            实践支队来到 P 中学的支教活动前夜，包括 AC 在内的几位同学正在一台一台地手动安装软件，为即将开始的支教活动做准备。窗外，刚下晚自习的 E 背着包、抱着书，靠在窗边向里张望。
+            实践支队来到 P 中学的支教活动前夜，包括 AC 在内的几位同学正在一台一台地手动安装软件，为即将开始的支教活动做准备。窗外，刚下晚自习的 E 组同学们背着包、抱着书，靠在窗边向里张望。里面的同学看向窗外，AC 如第二幕第一场的 C0 一样走到窗前。窗外的同学们看到被发现后，有些尴尬地哄笑了一下，相视一笑，把带他们来的
+            E0 推到了门前，哄笑着跑开到远处。队员们看着 E0 的背影，笑了一下，AC 前去拉住了 E0，带他进了机房。
+        }
+        \dialog[AC]{
+            怎么，是好奇我们在干嘛吗？
+        }
+        \stage{
+            【本段的作用是且仅是呼应第二幕第一场，不做更多展开】
         }
     }
 }
@@ -658,8 +764,18 @@
         \dialog[AF（画外音）]{
             希望你们，喜欢这个有意思的故事。
         }
+    }
+}
+
+%%%%%%%%%%%
+\act[幕结]{
+%%%%%%%%%%%
+    \scene[创作背景介绍]{
+        \dialog[字幕]{
+            本剧中所提及的所有作品，除主角的通信终端外，均为真实作品。
+        }
         \stage{
-            全剧终。
+            展示三字班硬件设计大赛的优秀作品（如平衡小车、智能药盒等），以及支教队指导高中生的优秀作品（如闹钟、音乐盒、按摩椅等）。
         }
     }
 }
@@ -671,7 +787,7 @@
 %%%%%%%%%%%%%%%%%%%
 \addcontentsline{toc}{chapter}{拍摄计划}
 
-\section*{DEMO拍摄}
+\section*{二审DEMO拍摄}
 \addcontentsline{toc}{section}{DEMO拍摄}
 
 \begin{table}[!ht]
@@ -682,7 +798,7 @@
         \textbf{时间} & \textbf{地点} & \textbf{内容} \\[0.3em]
         \midrule
         ~ & & \\[-0.7em]
-        10月11日        & 紫荆操场 & \textbf{ACT 2, SCENE 3} \\[0.3em]
+        10月11日        & 紫荆操场 & \textbf{ACT 2, SCENE 4} \\[0.3em]
         22:00～23:59    & ~ & 
             AP 受到打击，在操场上独自思考，被 C0 发现，获得宽慰。
         \\
@@ -700,7 +816,7 @@
         \textbf{时间} & \textbf{地点} & \textbf{内容} \\[0.3em]
         \midrule
         ~ & & \\[-0.7em]
-        10月12日        & 某个教室 & \textbf{ACT 2, SCENE 2} \\[0.3em]
+        10月12日        & 某个教室 & \textbf{ACT 2, SCENE 3} \\[0.3em]
         8:00～9:35      & ~ & 
             AP 及小组成员在机房讨论设计方案，C0 帮助他们调试程序。
         \\
@@ -713,6 +829,123 @@
     \kai \small
     \textbf{注：}该场由于校服难以到位，预计正式拍摄需要重拍。
 }
+
+{   \vspace{-0.5\baselineskip}
+    \kai \small
+    \textbf{又注：}不用多想了，都需要重拍。
+}
+
+\clearpage
+
+\section*{二审加审DEMO拍摄}
+
+\begin{table}[!ht]
+    \raggedright
+    \begin{tabular}{p{0.2\textwidth}p{0.2\textwidth}p{0.5\textwidth}}
+        \toprule
+        ~ & & \\[-0.7em]
+        \textbf{时间} & \textbf{地点} & \textbf{内容} \\[0.3em]
+        \midrule
+        ~ & & \\[-0.7em]
+        10月18日        & 紫荆操场 & \textbf{ACT 1, SCENE 1} \\[0.3em]
+        23:00～01:30    & （或某可使用的天台） & 
+            AC 和 B0、B1 讨论、调试硬件设计大赛的作品。
+        \\
+        ~ & & \\[-0.7em]
+        ~ & ~ & \textbf{ACT 3, SCENE 1} \\[0.3em]
+        ~ & ~ & 
+            AC 和 B0、B1 在接收到奇怪信号后，重新振作起来完成之后的调试。
+        \\
+        ~ & & \\[-0.7em]
+        ~ & ~ & \textbf{相关角色\quad}AC、B0、B1 \\[0.3em]
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+\begin{table}[!ht]
+    \raggedright
+    \begin{tabular}{p{0.2\textwidth}p{0.2\textwidth}p{0.5\textwidth}}
+        \toprule
+        ~ & & \\[-0.7em]
+        \textbf{时间} & \textbf{地点} & \textbf{内容} \\[0.3em]
+        \midrule
+        ~ & & \\[-0.7em]
+        10月19日        & 西大操场 & \textbf{ACT 2, SCENE 4} \\[0.3em]
+        23:00～01:30    & ~ & 
+            AP 受到打击，在操场上独自思考，被 C0 发现，获得宽慰。
+        \\
+        ~ & & \\[-0.7em]
+        ~ & ~ & \textbf{相关角色\quad}AP、C0 \\[0.3em]
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+\begin{table}[!ht]
+    \raggedright
+    \begin{tabular}{p{0.2\textwidth}p{0.2\textwidth}p{0.5\textwidth}}
+        \toprule
+        ~ & & \\[-0.7em]
+        \textbf{时间} & \textbf{地点} & \textbf{内容} \\[0.3em]
+        \midrule
+        ~ & & \\[-0.7em]
+        10月19日        & 一教 & \textbf{ACT 2, SCENE 3} \\[0.3em]
+        10:00～11:30     & ~ & 
+            AP 及小组成员在 C0 的指导下讨论设计方案。 
+        \\
+        ~ & & \\[-0.7em]
+        ~ & ~ & \textbf{ACT 2, SCENE 5} \\[0.3em]
+        ~ & ~ & 
+            AP 及小组成员在 C0 的指导下选定「通信终端」的设计方案。 
+        \\
+        ~ & & \\[-0.7em]
+        ~ & ~ & \textbf{相关角色\quad}AP、D0～D4、C0 \\[0.3em]
+        \bottomrule
+    \end{tabular}
+\end{table}
+{   \vspace{-0.7\baselineskip}
+    \kai \small
+    \textbf{注：}教学楼内部拍摄需要提前报备。
+}
+
+\clearpage
+
+\section*{正式拍摄}
+
+\begin{table}[!ht]
+    \raggedright
+    \begin{tabular}{p{0.2\textwidth}p{0.2\textwidth}p{0.5\textwidth}}
+        \toprule
+        ~ & & \\[-0.7em]
+        \textbf{时间} & \textbf{地点} & \textbf{内容} \\[0.3em]
+        \midrule
+        ~ & & \\[-0.7em]
+        10月XX日        & 主楼机房 & \textbf{ACT 2, SCENE 1} \\[0.3em]
+        XX:XX～XX:XX    & ~ & 
+            C0 等支教队成员在机房讨论设计方案，AP 等同学在窗外张望。 
+        \\
+        ~ & & \\[-0.7em]
+        ~ & ~ & \textbf{相关角色\quad}AP、C0～C4、D0～D2 \\[0.3em]
+        ~ & & \\[-0.7em]
+        ~ & ~ & \textbf{ACT 3, SCENE 3} \\[0.3em]
+        ~ & ~ & 
+            AC 与其他支教队成员在机房准备支教活动，E0 等同学在窗外张望。
+        \\
+        ~ & & \\[-0.7em]
+        ~ & ~ & \textbf{相关角色\quad}AC、B0、B1、Dx、E0～E4 \\[0.3em]
+        \bottomrule
+    \end{tabular}
+\end{table}
+{   \vspace{-0.7\baselineskip}
+    \kai \small
+    \textbf{注：}主楼内部拍摄需要提前报备。
+}
+
+
+
+
+
+
+
 
 % %%%%%%%%%%%%%%%%%%%
 % \chapter*{可用的梗}
